This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
10/6/23: Added script commands and other functions to control beam stop on
newer JEOL scopes and FEI scopes with UTAPI interface.

10/6/23: Added ability to renew connection to JEOL scope when there is a time
out in Navigator acquisition.

10/6/23: Added "special debug levels" to get some specific output without all
of the output activated by DebugOutout key letters.

10/3/23: Added script commands to determine number of functions defined in the
SerialEM executable and serialem module, for checking if module is up to date.

10/1/23: Added Python-only script command to make module return even a single
value as a tuple; reverted ReportItemAcquire to reporting a single value, and
added separate command to report if tilt series is set for an item.

10/1/23: Fixed problems with backlashes in SEMargStrings passed to a Python
script embedded in a regular one.

10/1/23: Fixed GetCrossover being called with spot size out of range.

9/27/23: SEM_4-1-0beta23
9/27/23: Incorporated new DE dll that fixes continuous mode.

9/27/23: Made starting image shift be restored at the end when recording image
shift vectors for Multiple Records.

9/27/23: Added a non-Qt version of Ctfplotter to install package and changed
SerialEM to use this unconditionally unless a graph is being saved.

9/20/23: Fixed external scripts hanging when STOP is pressed and made module
raus a SEMexited exception with a different message.

9/19/23: Changed parameters for doing stage montage with image shift in
blocks; instead of a number of blocks, which is mag-dependent, it is specified
with the maximum allowed image shift.  BLOCK SIZES IN SETTINGS DO NOT APPLY.
