@@ -159,6 +159,13 @@
           </TD>
         </TR>
         <TR VALIGN="top">
+          <TD>GlobalAutodocEntry</TD>
+          <TD>Key-value pair to be placed in the global section of the autodoc for any image 
+            file with an autodoc: MRC files with associated &#39;.mdoc&#39; file, HDF files, and 
+            &#39;.idoc&#39; files.&nbsp; The key is the first word of the entry, an equals sign after the key is 
+            optional, and the value is the rest of the line.</TD>
+        </TR>
+        <TR VALIGN="top">
           <TD>FrameFileTitle</TD>
           <TD>String to use for one or more additional titles in the header of frame stacks
             saved for a K2/K3 camera, in a frame mdoc file written to for each stack, and for
@@ -555,6 +562,7 @@
               s for STEM in general<br />
               t for exposure time changes in tasks and for continuous mode timing<BR>
               u for update items when polling JEOL, or time of scope update for all scopes<BR>
+              w for output on stage ready status
               y for reports when background saving starts and ends<br />
               % list script commands other than Set that allow arithmetic when program starts</P>
           </TD>
