@@ -3,6 +3,8 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+10/8/23: Added property to specify key-value pairs to add to autodocs.
+
 10/6/23: Added script commands and other functions to control beam stop on
 newer JEOL scopes and FEI scopes with UTAPI interface.
 
